--- a/src/App.css
+++ b/src/App.css
@@ -4243,9 +4243,13 @@ ul {
 	background-color: #0e8ce4;
   }
   .breadcrumb .breadcrumb_iner p {
-	font-size: 15px;
-	color: #f7f2f2;
-  }
+		float: left;
+		font-size: 15px;
+		color: #f7f2f2;
+	}
+	.breadcrumb .breadcrumb_iner p:hover{
+		opacity: 0.7;
+	}
   .breadcrumb {
 	margin-bottom: 0px !important;
   }  
